Define the standart properties for compatibility

--- a/css/leaflet.css
+++ b/css/leaflet.css
@@ -49,6 +49,7 @@
     width: 1600px;
     height: 1600px;
     -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
 }
 
 .leaflet-marker-icon,
@@ -119,6 +120,7 @@
 
 .leaflet-overlay-pane svg {
     -moz-user-select: none;
+    user-select: none;
 }
 
 .leaflet-pane {
@@ -653,6 +655,7 @@ svg.leaflet-image-layer.leaflet-interactive path {
 
 .leaflet-oldie .leaflet-popup-content-wrapper {
     -ms-zoom: 1;
+    zoom: 1;
 }
 
 .leaflet-oldie .leaflet-popup-tip {
